Reformating and changes for new version of article