@@ -5,6 +5,7 @@ import java.lang.annotation.Target;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static java.lang.annotation.ElementType.TYPE_USE;
 import static java.lang.annotation.RetentionPolicy.RUNTIME;
@@ -15,22 +16,27 @@ public class TypeAnnotations {
 
         @NotNull String userName = args[0];
 
-        List<String> request = new @NotEmpty ArrayList<>(Arrays.stream(args).toList());
+        List<String> request =
+                new @NotEmpty ArrayList<>(Arrays.stream(args).collect(
+                        Collectors.toList()));
 
         List<@Email String> emails;
 
 
     }
 
-    @Target(value={TYPE_USE})
-    @Retention(value=RUNTIME)
-    public @interface NotNull{}
+    @Target(value = {TYPE_USE})
+    @Retention(value = RUNTIME)
+    public @interface NotNull {
+    }
 
-    @Target(value={TYPE_USE})
-    @Retention(value=RUNTIME)
-    public @interface NotEmpty{}
+    @Target(value = {TYPE_USE})
+    @Retention(value = RUNTIME)
+    public @interface NotEmpty {
+    }
 
-    @Target(value={TYPE_USE})
-    @Retention(value=RUNTIME)
-    public @interface Email{}
+    @Target(value = {TYPE_USE})
+    @Retention(value = RUNTIME)
+    public @interface Email {
+    }
 }
